--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
      <link rel="icon" href="당근.png">
      <title> 도시 텃밭 </title>
-     <link href="table.css" rel="stylesheet" type="text/css">
+     <link href="style.css" rel="stylesheet" type="text/css">
  </head>
  <body>
    <header>
